@@ -382,5 +382,6 @@ Date: 2021.07.02
     - Drones now try to only pull as many batteries as needed for a round trip, rather than a full stack
     - Collapsing the to-do list now keeps the item list open, only hiding the ingredient list
     - Mining a building that is on your to-do list increments the list by one
+    - To-do list now responds to Craft Bench and Equipment Workshop items
   Optimizations:
     - MASSIVE performance improvement of resource spawner. This does mean there's a small chance of "mixed patches" but that's worth it for code that's 60x faster!
